force-app/main/default/objects/Floor_Plan__c/fields/Floor_Variant__c.field-meta.xml
<CustomField>
    <fullName>Floor_Variant__c</fullName>
    <label>Floor Variant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>