force-app/main/default/objects/Floor_Plan__c/fields/Plan_Floor_To__c.field-meta.xml
<CustomField>
    <fullName>Plan_Floor_To__c</fullName>
    <label>Plan Floor # To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>